--- a/proyecto/cartech_web/shop/templates/shop/base/navbar.html
+++ b/proyecto/cartech_web/shop/templates/shop/base/navbar.html
@@ -36,7 +36,7 @@
         <div class="container">
             <ul class="site-menu js-clone-nav d-none d-md-block">
                 <li><a href="#">Home</a></li>
-                <li><a href="{% url "shop:product_list" %}">Shop</a></li>
+                <li><a href="{% url "shop:cars_list" %}">Shop</a></li>
                 <li><a href="shop.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
