--- a/proyecto/cartech_web/shop/templates/shop/product/list.html
+++ b/proyecto/cartech_web/shop/templates/shop/product/list.html
@@ -18,17 +18,13 @@
         <div class="row mb-5">
             <div class="col-md-9 order-2">
                 <div class="row mb-5">
-                    {% for product in products %}
+                    {% for car in cars %}
                     <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                         <div class="block-4 text-center border">
-                            <figure class="block-4-image">
-                                <a href="{{ product.get_absolute_url }}"><img src="{{ product.image.url }}" 
-                                        alt="Image placeholder" class="img-fluid" style="height: 10vw;"></a>
-                            </figure>
                             <div class="block-4-text p-4">
-                                <h3><a href="{{ product.get_absolute_url }}">{{ product.name }}</a></h3>
-                                <p class="mb-0">{{ product.description }}</p>
-                                <p class="text-primary font-weight-bold">${{ product.price }}</p>
+                                <h3><a href="{{ car.get_absolute_url }}">{{ car.modelo }}</a></h3>
+                                <p class="mb-0">{{ car.consumo }}</p>
+                                <p class="text-primary font-weight-bold">${{ car.precio_inicial }}</p>
                             </div>
                         </div>
                     </div>
@@ -51,21 +47,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 order-1 mb-5 mb-md-0">
-                <div class="border p-4 rounded mb-4">
-                    <h3 class="mb-3 h6 text-uppercase text-black d-block">Categories</h3>
-                    <ul class="list-unstyled mb-0">
-                        <li {% if not category %} class="mb-1" {% endif %}>
-                            <a href="{% url "shop:product_list" %}" class="d-flex"><span>All</a>
-                        </li>
-                        {% for c in categories %}
-                        <li {% if category.slug == c.slug %} class="mb-1" {% endif %}>
-                            <a href="{{ c.get_absolute_url }}" class="d-flex">{{ c.name }}</a>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
+            
         </div>
     </div>
 </div>
