--- a/proyecto/cartech_web/shop/templates/shop/cars/detail.html
+++ b/proyecto/cartech_web/shop/templates/shop/cars/detail.html
@@ -2,13 +2,13 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block title %}
-{{ product.name }}
+{{ car.name }}
 {% endblock %}
 {% block content %}
     <div class="bg-light py-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 mb-0"><a href="index.html">Home</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">{{ product.name }}</strong></div>
+          <div class="col-md-12 mb-0"><a href="index.html">Home</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">{{ car.marca }} {{ car.modelo }}</strong></div>
         </div>
       </div>
     </div>  
@@ -16,21 +16,14 @@
     <div class="site-section">
       <div class="container">
         <div class="row">
+          
           <div class="col-md-6">
-            <img src="{{ product.image.url }}" alt="Image" class="img-fluid">
-          </div>
-          <div class="col-md-6">
-            <h2 class="text-black mr-2">{{ product.name }}</h2>
-            <p>{{ product.description|linebreaks }}</p>
-            <p><strong class="text-primary h4">${{ product.price }}</strong></p>
-            <div class="mt-5 col-md-5">
-              <form action="{% url "cart:cart_add" product.id %}" method="post">
-                {% csrf_token %}
-                {{ cart_product_form|crispy }}
-                <input type="submit" class="buy-now btn btn-sm btn-primary" value="Add to cart">
-              </form>
-            </div>
-            </div>
+            <h2 class="text-black mr-2">{{ car.marca }} {{ car.modelo }}</h2>
+            <p>Consumo: {{ car.consumo }}</p>
+            <p>Combustible: {{ car.combustible }}</p>
+            <p>Conduccion: {{ car.conduccion }}</p>
+            <p>Caballos: {{ car.caballos }}</p>
+            <p><strong class="text-primary h4">{{ car.precio_inicial }}</strong></p>
           </div>
         </div>
       </div>
