--- a/proyecto/cartech_web/incidencias/templates/listar_incidencias.html
+++ b/proyecto/cartech_web/incidencias/templates/listar_incidencias.html
@@ -7,8 +7,11 @@
 <div class="bg-light py-3">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 mb-0"><a href="index.html">Home</a> <span class="mx-2 mb-0">/</span> <strong
-                    class="text-black">Tienda</strong></div>
+            {% with base_url="/incidencias/" %}
+            <div class="col-md-12 mb-0"><a href="{{ base_url }}">Incidencias</a> <span class="mx-2 mb-0">/</span> <strong
+                    class="text-black">Mis incidencias</strong></div>
+            {% endwith %}
+
         </div>
     </div>
 </div>
