--- a/proyecto/cartech_web/shop/templates/shop/base/navbar.html
+++ b/proyecto/cartech_web/shop/templates/shop/base/navbar.html
@@ -35,8 +35,10 @@
     <nav class="site-navigation text-right text-md-center" role="navigation">
         <div class="container">
             <ul class="site-menu js-clone-nav d-none d-md-block">
-                <li><a href="#">Home</a></li>
-                <li><a href="{% url "shop:cars_list" %}">Shop</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="{% url "shop:cars_list" %}">Configurador coches</a></li>
+                <li><a href="/incidencias/">Incidencias</a></li>
+                <li><a href="/pedidos/">Mis pedidos</a></li>
                 <li><a href="shop.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
