--- a/proyecto/cartech_web/shop/templates/shop/cars/detail.html
+++ b/proyecto/cartech_web/shop/templates/shop/cars/detail.html
@@ -5,75 +5,78 @@
 {{ car.name }}
 {% endblock %}
 {% block content %}
-    <div class="bg-light py-3">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 mb-0"><a href="index.html">Home</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">{{ car.marca }} {{ car.modelo }}</strong></div>
-        </div>
-      </div>
-    </div>  
+<div class="bg-light py-3">
+  <div class="container">
+    <div class="row">
+      {% with base_url="/list" %}
+      <div class="col-md-12 mb-0"><a href="{{ base_url }}">Coches</a> <span class="mx-2 mb-0">/</span> <strong
+          class="text-black">{{ car.marca }} {{ car.modelo }}</strong></div>
+      {% endwith %}
+    </div>
+  </div>
+</div>
 
-    <div class="site-section">
-      <div class="container">
-        <div class="row">
-          
-          <div class="col-md-6">
-            <h2 class="text-black mr-2">{{ car.marca }} {{ car.modelo }}</h2>
-            <p>Consumo: {{ car.consumo }}</p>
-            <p>Combustible: {{ car.combustible }}</p>
-            <p>Conduccion: {{ car.conduccion }}</p>
-            <p>Caballos: {{ car.caballos }}</p>
-            <p><strong class="text-primary h4">Precio Base: {{ car.precio_inicial }}€</strong></p>
+<div class="site-section">
+  <div class="container">
+    <div class="row">
 
-            {% if accesorios_seleccionados %}
-                    <h3>Accesorios:</h3>
-                    <ul>
-                        {% for accesorio in accesorios_seleccionados %}
-                            <li>{{ accesorio.nombre }} - {{ accesorio.precio }}€</li>
-                        {% endfor %}
-                    </ul>
-                {% else %}
-                    <p>No se han seleccionado accesorios para este coche.</p>
-                {% endif %}
+      <div class="col-md-6">
+        <h2 class="text-black mr-2">{{ car.marca }} {{ car.modelo }}</h2>
+        <p>Consumo: {{ car.consumo }}</p>
+        <p>Combustible: {{ car.combustible }}</p>
+        <p>Conduccion: {{ car.conduccion }}</p>
+        <p>Caballos: {{ car.caballos }}</p>
+        <p><strong class="text-primary h4">Precio Base: {{ car.precio_inicial }}€</strong></p>
 
-            <p><strong class="text-primary h4">Precio total: {{ precio_total }}€</strong></p>
-            <form id="comprar-form" method="post" class="row">
-              {% csrf_token %}
-              <div class="col-12">
-                  <button type="submit" class="btn btn-primary" name="comprar">Comprar</button>
-              </div>
-          </form>
+        {% if accesorios_seleccionados %}
+        <h3>Accesorios:</h3>
+        <ul>
+          {% for accesorio in accesorios_seleccionados %}
+          <li>{{ accesorio.nombre }} - {{ accesorio.precio }}€</li>
+          {% endfor %}
+        </ul>
+        {% else %}
+        <p>No se han seleccionado accesorios para este coche.</p>
+        {% endif %}
+
+        <p><strong class="text-primary h4">Precio total: {{ precio_total }}€</strong></p>
+        <form id="comprar-form" method="post" class="row">
+          {% csrf_token %}
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary" name="comprar">Comprar</button>
           </div>
-          <div class="col-md-6">
-            <h3>Accesorios Disponibles:</h3>
-            <form id="accesorios-form" method="post" class="row">
-                {% csrf_token %}
-                {% for accesorio in accesorios_disponibles %}
-                    <div class="col-sm-6 col-lg-4 mb-4">
-                        <div class="block-4 text-center border">
-                            <div class="block-4-text p-4">
-                              <p>{{ accesorio.nombre }}  </p>
-                              <p>{{ accesorio.precio }}€ </p>
-                                <label class="d-block">
-                                  <input type="checkbox" name="accesorios_seleccionados" value="{{ accesorio.id }}"> 
-                                  Seleccionar
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-                <div class="col-12">
-                    <button type="submit" class="btn btn-primary" name="confirmar_eleccion">Confirmar elección</button>
-                </div>
-            </form>
-        </div>
-        </div>
-        </div>
+        </form>
+      </div>
+      <div class="col-md-6">
+        <h3>Accesorios Disponibles:</h3>
+        <form id="accesorios-form" method="post" class="row">
+          {% csrf_token %}
+          {% for accesorio in accesorios_disponibles %}
+          <div class="col-sm-6 col-lg-4 mb-4">
+            <div class="block-4 text-center border">
+              <div class="block-4-text p-4">
+                <p>{{ accesorio.nombre }} </p>
+                <p>{{ accesorio.precio }}€ </p>
+                <label class="d-block">
+                  <input type="checkbox" name="accesorios_seleccionados" value="{{ accesorio.id }}">
+                  Seleccionar
+                </label>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary" name="confirmar_eleccion">Confirmar elección</button>
+          </div>
+        </form>
       </div>
     </div>
-      
-      
   </div>
+</div>
+</div>
 
-    
+
+</div>
+
+
 {% endblock %}
