--- a/proyecto/cartech_web/shop/templates/shop/home.html
+++ b/proyecto/cartech_web/shop/templates/shop/home.html
@@ -1,3 +1,8 @@
+{% extends "shop/base/base.html" %}
+{% load static %}
+{% load crispy_forms_tags %} 
+{% block content %}
+
   <div class="container">
     <div class="row align-items-start align-items-md-center justify-content-end">
       <div class="col-md-5 text-center text-md-left pt-5 pt-md-0">
@@ -160,3 +165,5 @@
       </div>
     </div>
   </div>
+
+{% endblock %}
