--- a/proyecto/cartech_web/shop/templates/shop/base/navbar.html
+++ b/proyecto/cartech_web/shop/templates/shop/base/navbar.html
@@ -21,7 +21,18 @@
                         <ul>
                             <li><a href="#"><span class="icon icon-person"></span></a></li>
                             <li>
-                                
+                                <a href="{% url "cart:cart_detail" %}" class="site-cart">
+                                    <span class="icon icon-shopping_cart"></span>
+                                    <span class="count">
+                                    {% with total_items=cart|length %}
+                                        {% if cart|length > 0 %}
+                                            {{ total_items|pluralize }}
+                                        {% else %}
+                                            0
+                                        {% endif %}
+                                    {% endwith %}
+                                    </span>
+                                </a>
                             </li>
                             <li class="d-inline-block d-md-none ml-md-0"><a href="#"
                                     class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
