--- a/proyecto/cartech_web/shop/templates/shop/base/navbar.html
+++ b/proyecto/cartech_web/shop/templates/shop/base/navbar.html
@@ -19,13 +19,18 @@
                 <div class="col-6 col-md-4 order-3 order-md-3 text-right">
                     <div class="site-top-icons">
                         <ul>
-                            <li><a href="#"><span class="icon icon-person"></span></a></li>
-                            <li>
-                                
+                            {% if user.is_authenticated %}
+                                <li><a href="salir/"><span class="icon icon-person"></span> Cerrar Sesión</a></li>
+                            {% else %}
+                                <li><a href="{% url 'login' %}"><span class="icon icon-person"></span> Iniciar Sesión</a></li>
+                            {% endif %}
+                            <li class="d-inline-block d-md-none ml-md-0">
+                                <a href="#" class="site-menu-toggle js-menu-toggle">
+                                    <span class="icon-menu"></span>
+                                </a>
                             </li>
-                            <li class="d-inline-block d-md-none ml-md-0"><a href="#"
-                                    class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
                         </ul>
+                        
                     </div>
                 </div>
 
