--- a/proyecto/cartech_web/shop/templates/shop/cars/detail.html
+++ b/proyecto/cartech_web/shop/templates/shop/cars/detail.html
@@ -44,6 +44,7 @@
           {% csrf_token %}
           <div class="col-12">
             <button type="submit" class="btn btn-primary" name="comprar">Comprar</button>
+            <a href="{% url 'shop:add' value.coche.id %}">agregar al carrito</a>
           </div>
         </form>
       </div>
