--- a/proyecto/cartech_web/incidencias/templates/base.html
+++ b/proyecto/cartech_web/incidencias/templates/base.html
@@ -10,5 +10,6 @@
 
     <!-- Botón para listar incidencias -->
     <a href="{% url "incidencias:listar_incidencias" %}" class="btn btn-success">Listar Incidencias</a>
+    <a href="{% url "incidencias:mis_incidencias" %}" class="btn btn-success">Mis Incidencias</a>
   </div>
 {% endblock %}
