--- a/proyecto/cartech_web/shop/templates/shop/coches/listar_hibridos.html
+++ b/proyecto/cartech_web/shop/templates/shop/coches/listar_hibridos.html
@@ -24,7 +24,16 @@
                     <form method="get" id="filtrado">
                         <h3 class="text-black mb-3">Filtrar</h3>
                         <div class="form-group">
-
+                            <input class="form-check-input" type="checkbox" id="con_stock" name="con_stock" {% if con_stock %}checked{% endif %}>
+                            <label class="form-check-label" for="con_stock">
+                                Mostrar solo coches con stock
+                            </label>
+                            <br>
+                            <br>
+                            <label for="modelo">Marca</label>
+                            <input type="text" class="form-control" id="marca" name="marca" value="{{ marca }}">
+                            <label for="modelo">Modelo</label>
+                            <input type="text" class="form-control" id="modelo" name="modelo" value="{{ modelo }}">
                             <label for="combustible">Tipo de Conducción</label>
                             <select class="form-control" id="conduccion" name="conduccion">
                                 <option value="" {% if not conduccion %}selected{% endif %}>Todos</option>
