--- a/proyecto/cartech_web/pedidos/templates/detalle_pedido.html
+++ b/proyecto/cartech_web/pedidos/templates/detalle_pedido.html
@@ -21,7 +21,7 @@
           
           <div class="col-md-6">
             <h2 class="text-black mr-2">{{ coche.marca }} {{ coche.modelo }}</h2>
-
+            <p>Id del pedido: {{ pedido.id_pedido }}€</p>
 
             <p>Precio base: {{ coche.precio_inicial }}€</p>
 
