--- a/proyecto/cartech_web/shop/templates/shop/base/navbar.html
+++ b/proyecto/cartech_web/shop/templates/shop/base/navbar.html
@@ -43,7 +43,11 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="{% url "shop:selector" %}">Configurador coches</a></li>
                 <li><a href="/incidencias/">Incidencias</a></li>
+                {% if user.is_authenticated %}
                 <li><a href="{% url "pedidos:mis_pedidos" %}">Mis pedidos</a></li>
+                {% else %}
+                <li><a href="{% url "pedidos:buscar_pedido" %}">Pedidos</a></li>
+                {% endif %}
                 <li><a href="shop.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
