--- a/proyecto/cartech_web/carrito/templates/listar_carrito.html
+++ b/proyecto/cartech_web/carrito/templates/listar_carrito.html
@@ -1,1 +1,37 @@
-{{ elecciones }}
+{% extends "shop/base/base.html" %}
+{% load static %}
+{% block title %}
+{% endblock %}
+{% block content %}
+<body>
+<div class="site-section">
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col-md-9 order-2">
+                <div class="row mb-5">
+                    {% for eleccion in elecciones %}
+                    <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
+                        <div class="block-4 text-center border">
+                            <div class="block-4-text p-4">
+                                <p class="mb-0"><a href="{{pedido.id}}" %}">Coche: {{ pedido.eleccion.coche.marca }} {{ pedido.eleccion.coche.modelo }}</a></p>
+                                <p class="mb-0">Estado: {{ pedido.status }}</p>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                
+                
+            </div>
+            
+        </div>
+    </div>
+</div>
+<script>
+    function resetFilters(event) {
+        var url = "/";
+        window.location.href = url
+    }
+</script>
+</body>
+{% endblock %}
