--- a/proyecto/cartech_web/incidencias/templates/crear_incidencia.html
+++ b/proyecto/cartech_web/incidencias/templates/crear_incidencia.html
@@ -1,5 +1,5 @@
 <!-- incidencias/templates/incidencias/crear_incidencia.html -->
-{% extends "shop/base/base.html" %}
+{% extends "base/base.html" %}
 
 {% block content %}
 <!-- Contenido específico de la creación de incidencias -->
