--- a/proyecto/cartech_web/pedidos/templates/buscar_pedido.html
+++ b/proyecto/cartech_web/pedidos/templates/buscar_pedido.html
@@ -1,6 +1,6 @@
 <!-- buscar_pedido.html -->
 
-{% extends "shop/base/base.html" %}
+{% extends "base/base.html" %}
 {% load static %}
 {% block title %}
 {% endblock %}
