--- a/proyecto/cartech_web/incidencias/templates/listar_incidencias.html
+++ b/proyecto/cartech_web/incidencias/templates/listar_incidencias.html
@@ -1,4 +1,4 @@
-{% extends "shop/base/base.html" %}
+{% extends "base/base.html" %}
 {% load static %}
 {% block title %}
 {% if category %}{{ category.name }}{% else %}Incidencias{% endif %}
