--- a/proyecto/cartech_web/shop/templates/base/base.html
+++ b/proyecto/cartech_web/shop/templates/base/base.html
@@ -20,10 +20,10 @@
 
 <body>
     <div class="site-wrap">
-        {% include 'shop/base/navbar.html' %}
+        {% include 'base/navbar.html' %}
         {% block content %}
         {% endblock %}
-        {% include 'shop/base/footer.html' %}
+        {% include 'base/footer.html' %}
     </div>
     <script src="{% static "js/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "js/jquery-ui.js" %}"></script>
