--- a/proyecto/cartech_web/shop/templates/coches/selector.html
+++ b/proyecto/cartech_web/shop/templates/coches/selector.html
@@ -1,4 +1,4 @@
-{% extends "shop/base/base.html" %}
+{% extends "base/base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% block title %}
