--- a/proyecto/cartech_web/shop/templates/base/navbar.html
+++ b/proyecto/cartech_web/shop/templates/base/navbar.html
@@ -43,7 +43,7 @@
             <div class="container">
                 <ul class="site-menu js-clone-nav d-none d-md-block">
                     <li><a href="/">Home</a></li>
-                    <li><a href="{% url "shop:crear_coche" %}">Coches</a></li>
+                    <li><a href="{% url "shop:listado_coches" %}">Coches</a></li>
                     <li><a href="/incidencias/">Accesorios</a></li>
                     <li><a href="{% url "pedidos:mis_pedidos" %}">Pedidos</a></li>
                     <li><a href="{% url "pedidos:buscar_pedido" %}">Incidencias</a></li>
