--- a/proyecto/cartech_web/shop/templates/coches/listar_coches.html
+++ b/proyecto/cartech_web/shop/templates/coches/listar_coches.html
@@ -21,6 +21,11 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-3 order-1 mb-5 mb-md-0">
+                    {% if user.is_authenticated and user.is_staff%}
+                    <a href="{% url "shop:crear_coche" %}"><button type="button" class="btn btn-primary" name="editar">Crear</button></a>
+                    <br>
+                    <br>
+                    {% endif %} 
                     <form method="get" id="filtrado">
                         <h3 class="text-black mb-3">Filtrar</h3>
                         <div class="form-group">
