--- a/proyecto/cartech_web/shop/templates/accesorios/borrar_accesorio.html
+++ b/proyecto/cartech_web/shop/templates/accesorios/borrar_accesorio.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="container mt-5">
   <h2 class="mb-4">Confirmar Borrado</h2>
-  <p>¿Estás seguro de que quieres borrar el coche "{{ coche }}"?</p>
+  <p>¿Estás seguro de que quieres borrar el accesorio "{{ coche }}"?</p>
   <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Sí, Borrar</button>
