--- a/proyecto/cartech_web/shop/templates/base/navbar.html
+++ b/proyecto/cartech_web/shop/templates/base/navbar.html
@@ -44,7 +44,7 @@
                 <ul class="site-menu js-clone-nav d-none d-md-block">
                     <li><a href="/">Home</a></li>
                     <li><a href="{% url "shop:listado_coches" %}">Coches</a></li>
-                    <li><a href="/incidencias/">Accesorios</a></li>
+                    <li><a href="{% url "shop:listado_accesorios" %}">Accesorios</a></li>
                     <li><a href="{% url "pedidos:mis_pedidos" %}">Pedidos</a></li>
                     <li><a href="{% url "pedidos:buscar_pedido" %}">Incidencias</a></li>
                 </ul>
