--- a/proyecto/cartech_web/carrito/templates/listar_carrito.html
+++ b/proyecto/cartech_web/carrito/templates/listar_carrito.html
@@ -13,7 +13,7 @@
                     <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                         <div class="block-4 text-center border">
                             <div class="block-4-text p-4">
-                                <p class="mb-0"><a href="{{pedido.id}}" %}">Coche: {{ pedido.eleccion.coche.marca }} {{ pedido.eleccion.coche.modelo }}</a></p>
+                                <p class="mb-0"><a href="{{pedido.id}}" %}">Coche: {{ eleccion.coche.marca }} {{ pedido.eleccion.coche.modelo }}</a></p>
                                 <p class="mb-0">Estado: {{ pedido.status }}</p>
                             </div>
                         </div>
