--- a/proyecto/cartech_web/shop/templates/coches/selector.html
+++ b/proyecto/cartech_web/shop/templates/coches/selector.html
@@ -59,7 +59,7 @@
 <body>
     <div class="card-container">
         <div class="card">
-            <a href="/list/all">
+            <a href="/coches/list">
             <img src="/media/imagenes/configura-coche.jpg" alt="Imagen 1">
             <div class="overlay">
                 <h2>Busca todo tipo de coches</h2>
@@ -68,7 +68,7 @@
         </div>
 
         <div class="card">
-            <a href="/list/electricos">
+            <a href="/coches/list/electricos">
             <img src="/media/imagenes/electrico.jpg" alt="Imagen 2">
             <div class="overlay">
                 <h2>Descubre los coches eléctricos</h2>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="card">
-            <a href="/list/hibridos">
+            <a href="/coches/list/hibridos">
             <img src="/media/imagenes/hibrido.jpg" alt="Imagen 3">
             <div class="overlay">
                 <h2>Descubre los coches híbridos</h2>
@@ -86,7 +86,7 @@
         </div>
 
         <div class="card">
-            <a href="/list/combustible">
+            <a href="/coches/list/combustible">
             <img src="/media/imagenes/combustion.jpg" alt="Imagen 4">
             <div class="overlay">
                 <h2>Descubre los coches de combustión</h2>
