--- a/proyecto/cartech_web/shop/templates/coches/listar_coches.html
+++ b/proyecto/cartech_web/shop/templates/coches/listar_coches.html
@@ -9,7 +9,7 @@
         <div class="row">
             {% with base_url="/" %}
             <div class="col-md-12 mb-0"><a href="{{ base_url }}">Home</a> <span class="mx-2 mb-0">/</span> <strong
-                    class="text-black">Tienda</strong></div>
+                    class="text-black">Coches</strong></div>
             {% endwith %}
 
         </div>
